fix the missing color styles

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -295,6 +295,26 @@ body {
     #login-form form input[type="submit"]:hover {
       background-color: #999; }
 
+.red {
+  width: 20px;
+  height: 20px;
+  background-color: red; }
+
+.green {
+  width: 20px;
+  height: 20px;
+  background-color: green; }
+
+.yellow {
+  width: 20px;
+  height: 20px;
+  background-color: yellow; }
+
+.blue {
+  width: 20px;
+  height: 20px;
+  background-color: blue; }
+
 .activeColor {
   border-style: solid;
   border-color: black; }
