--- a/src/stylesheets/application.css.sass
+++ b/src/stylesheets/application.css.sass
@@ -79,6 +79,29 @@ body
     input[type="submit"]:hover
       background-color: $light-grey
 
+
+.red
+  width: 20px
+  height: 20px
+  background-color: red
+
+.green
+  width: 20px
+  height: 20px
+  background-color: green
+
+.yellow
+  width: 20px
+  height: 20px
+  background-color: yellow
+
+.blue
+  width: 20px
+  height: 20px
+  background-color: blue
+
+
+
 .activeColor
   border-style: solid
   border-color: black
